--- a/src/.deps/rvma_write.Po
+++ b/src/.deps/rvma_write.Po
@@ -17,13 +17,23 @@ src/rvma_write.o: src/rvma_write.c \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/wchar.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/stdint-intn.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/stdint-uintn.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/math.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/math-vector.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/libm-simd-decl-stubs.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/floatn.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/floatn-common.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/flt-eval-method.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/fp-logb.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/fp-fast.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/mathcalls-helper-functions.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/mathcalls.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/mathcalls-narrow.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/iscanonical.h \
  src/rvma_write.h src/rvma_common.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/stdlib.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/lib/gcc/x86_64-pc-linux-gnu/12/include/stddef.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/waitflags.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/waitstatus.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/floatn.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/floatn-common.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/locale_t.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/__locale_t.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/sys/types.h \
@@ -140,7 +150,60 @@ src/rvma_write.o: src/rvma_write.c \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/sockios.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/struct_osockaddr.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/socket2.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/in.h
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/in.h \
+ src/rvma_socket.c \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/sys/time.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/netdb.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/rpc/netdb.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/sigevent_t.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/__sigval_t.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/netdb.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/fcntl.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/fcntl.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/fcntl-linux.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/falloc.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/stat.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/struct_stat.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/fcntl2.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/netinet/tcp.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/sys/epoll.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/epoll.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/sys/eventfd.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/eventfd.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/search.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/byteswap.h \
+ /home/andrewh8/src/rdma-core/build/include/util/compiler.h \
+ /home/andrewh8/src/rdma-core/build/include/util/util.h \
+ /home/andrewh8/src/rdma-core/build/include/ccan/ilog.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/lib/gcc/x86_64-pc-linux-gnu/12/include-fixed/limits.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/lib/gcc/x86_64-pc-linux-gnu/12/include-fixed/syslimits.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/limits.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/posix1_lim.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/local_lim.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/limits.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/posix2_lim.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/xopen_lim.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/uio_lim.h \
+ /home/andrewh8/src/rdma-core/build/include/ccan/compiler.h \
+ /home/andrewh8/src/rdma-core/build/include/ccan/container_of.h \
+ /home/andrewh8/src/rdma-core/build/include/ccan/check_type.h \
+ /home/andrewh8/src/rdma-core/build/include/ccan/build_assert.h \
+ /home/andrewh8/src/rdma-core/build/include/rdma/rdma_cma.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/sa.h \
+ /home/andrewh8/src/rdma-core/build/include/rdma/rdma_verbs.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/assert.h \
+ src/perftest_resources.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/mlx5dv.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/tm_types.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/mlx5_api.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/mlx5_user_ioctl_verbs.h \
+ src/rvma_socket.h \
+ /home/andrewh8/src/rdma-core/build/include/rdma/rsocket.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/poll.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/sys/poll.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/poll.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/poll2.h \
+ src/indexer.h
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/stdc-predef.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/lib/gcc/x86_64-pc-linux-gnu/12/include/stdint.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/stdint.h:
@@ -159,14 +222,24 @@ src/rvma_write.o: src/rvma_write.c \
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/wchar.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/stdint-intn.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/stdint-uintn.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/math.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/math-vector.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/libm-simd-decl-stubs.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/floatn.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/floatn-common.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/flt-eval-method.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/fp-logb.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/fp-fast.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/mathcalls-helper-functions.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/mathcalls.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/mathcalls-narrow.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/iscanonical.h:
 src/rvma_write.h:
 src/rvma_common.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/stdlib.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/lib/gcc/x86_64-pc-linux-gnu/12/include/stddef.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/waitflags.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/waitstatus.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/floatn.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/floatn-common.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/locale_t.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/__locale_t.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/sys/types.h:
@@ -288,3 +361,56 @@ src/rvma_buffer_queue.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/struct_osockaddr.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/socket2.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/in.h:
+src/rvma_socket.c:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/sys/time.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/netdb.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/rpc/netdb.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/sigevent_t.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/__sigval_t.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/netdb.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/fcntl.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/fcntl.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/fcntl-linux.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/falloc.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/stat.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/struct_stat.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/fcntl2.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/netinet/tcp.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/sys/epoll.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/epoll.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/sys/eventfd.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/eventfd.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/search.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/byteswap.h:
+/home/andrewh8/src/rdma-core/build/include/util/compiler.h:
+/home/andrewh8/src/rdma-core/build/include/util/util.h:
+/home/andrewh8/src/rdma-core/build/include/ccan/ilog.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/lib/gcc/x86_64-pc-linux-gnu/12/include-fixed/limits.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/lib/gcc/x86_64-pc-linux-gnu/12/include-fixed/syslimits.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/limits.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/posix1_lim.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/local_lim.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/limits.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/posix2_lim.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/xopen_lim.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/uio_lim.h:
+/home/andrewh8/src/rdma-core/build/include/ccan/compiler.h:
+/home/andrewh8/src/rdma-core/build/include/ccan/container_of.h:
+/home/andrewh8/src/rdma-core/build/include/ccan/check_type.h:
+/home/andrewh8/src/rdma-core/build/include/ccan/build_assert.h:
+/home/andrewh8/src/rdma-core/build/include/rdma/rdma_cma.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/sa.h:
+/home/andrewh8/src/rdma-core/build/include/rdma/rdma_verbs.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/assert.h:
+src/perftest_resources.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/mlx5dv.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/tm_types.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/mlx5_api.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/mlx5_user_ioctl_verbs.h:
+src/rvma_socket.h:
+/home/andrewh8/src/rdma-core/build/include/rdma/rsocket.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/poll.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/sys/poll.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/poll.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/poll2.h:
+src/indexer.h:
